--- a/05 - Flex Panel Gallery/style.css
+++ b/05 - Flex Panel Gallery/style.css
@@ -27,6 +27,7 @@ body {
   box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
   color: white;
   text-align: center;
+  align-items: center;
   /* Safari transitionend event.propertyName === flex */
   /* Chrome + FF transitionend event.propertyName === flex-grow */
   transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11),
@@ -35,9 +36,9 @@ body {
   background-size: cover;
   background-position: center;
 
+  flex: 1;
   display: flex;
   flex-direction: column;
-  flex: 1;
 }
 
 .panel1 {
@@ -68,7 +69,6 @@ body {
   font-family: "Amatic SC", cursive;
   text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
   font-size: 2em;
-
   flex: 1;
   display: flex;
   justify-content: center;
@@ -79,17 +79,17 @@ body {
   font-size: 4em;
 }
 
+.panel.open {
+  font-size: 40px;
+  flex: 5;
+}
+
 .panel p:first-child {
   transform: translateY(-100%);
 }
 
 .panel p:last-child {
   transform: translateY(100%);
-}
-
-.panel.open {
-  font-size: 40px;
-  flex: 5;
 }
 
 .panel.active p:first-child {
