--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,7 @@
 html {
   font-size: 10px;
-  background: url(https://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background: url(https://kr.yamaha.com/ko/files/Image-main_Drums_91b43859fbd74a6bb8411a345703095c.jpg?impolicy=resize&imwid=1200&imhei=480)
+    bottom center;
   background-size: cover;
 }
 
